# raytracer-challenge

./: .ccls  CMakeLists.txt
apps/: CMakeLists.txt
apps/cannon/: Environment.h  Projectile.h  main.cpp
apps/clock/: main.cpp
apps/scene_ch7/: main.cpp
apps/scene_ch9/: main.cpp
apps/sphere/: main.cpp
apps/test/: clock.ppm  sphere.ppm
src/: CMakeLists.txt  Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  CheckerPattern.cpp  CheckerPattern.h  Color.h  Cube.cpp  Cube.h  GradientPattern.cpp  GradientPattern.h  Intersection.cpp  Intersection.h  Material.cpp  Material.h  Matrix.h  Pattern.cpp  Pattern.h  Plane.cpp  Plane.h  PointLight.h  Ray.h  RingPattern.cpp  RingPattern.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  StripePattern.cpp  StripePattern.h  Transformations.h  Tuple.cpp  Tuple.h  World.cpp  World.h  common.h
test/: CMakeLists.txt  Test_Camera.cpp  Test_Canvas.cpp  Test_Color.cpp  Test_Cube.cpp  Test_Intersection.cpp  Test_Material.cpp  Test_Matrix.cpp  Test_Pattern.cpp  Test_Pattern.h  Test_Plane.cpp  Test_PointLight.cpp  Test_Ray.cpp  Test_Shape.cpp  Test_Shape.h  Test_Sphere.cpp  Test_Spheres.cpp  Test_Transformations.cpp  Test_Tuple.cpp  Test_World.cpp
